synaptic (0.75.2) UNRELEASED; urgency=low

  * po/ru.po:
    - updated, thanks to Alexander Sashanov (closes: #614969)
  * po/pt_BR.po:
    - updated, thanks to Sérgio Cipolla (closes: #606447)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Mar 2011 17:04:55 +0100

synaptic (0.75.1) unstable; urgency=low

  * po/ru.po:
    - updated, thanks to Alexander Sashanov (closes: #614969)
  * gtk/rgrepositorywin.cc, gtk/gtkbuilder/window_repositories.ui:
    - fix repository editor (closes: #613436)
  * gtk/gtkbuilder/window_main.ui:
    - fixup glade->gtkbuild menu messup
  * gtk/rgmainwindow.cc:
    - hide "quick filter" if no apt-xapian-index is installed
      (closes: #613434)
  * po/pl.po:
    - fix newsgroup translation (thanks to Michal Szwaczko),
      closes: #613346
  * merged lp:~and471/synaptic/fix-resize-grip that adds a bit of
    extra spacing for the progressbar on the lower right

 -- Michael Vogt <mvo@debian.org>  Fri, 04 Mar 2011 11:55:24 +0100

synaptic (0.75) unstable; urgency=low

  [ Michael Vogt ]
  * merged lp:~mathieu-tl/synaptic/gtk3 this brings gtkbuilder
    (instead of glade) and the preparation for updating for gtk3
    Many thanks to Mathieu Trudel-Lapierre
  * show changelog button alongside the screenshot button
  * make sure /etc/apt/apt.conf.d/99synaptic is mode 644
    (LP: #637157)
  * common/rpackagecache.cc:
    - read pindir as well as the pinfile (LP: #628818)
  * when reading markings, ensure the views are refreshed
    so that broken dependencies are displayed
  * show /ask about the pkg state changes when reading selections
    from a file, simpify askStateChanges code
  * merged
    lp:~chris-ascentsoftware/ubuntu/natty/synaptic/synaptic-fix-706271
    many thanks! (LP: #706271)
  * merged lp:~kelemeng/synaptic/bug702181, many thanks! 
    (LP: #702181)
  * merged lp:~kelemeng/synaptic/bug688897, many thanks! 
    (LP: #688897)

  [ Chris McGinlay ]
  * gtk/gtkbuilder/window_preferences.ui, po/*